# fhi_resources

./: CMakeLists.txt  LICENSE  families.yaml  package.xml
json/: driller.json  flange.json  flange_plastic.json  robotiq2f85.json  tip.json
models/modular/meshes/: driller.stl  flange.stl
models/modular/meshes/simple/: driller.stl
module_addons/json/: driller_camera.json
